kubernetes/interview-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interview-deployment
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: interview
  template:
    metadata:
      name: interview
      labels: 
        app: interview
    spec:
      containers:
        - name: interview
          image: nginx
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: interview-service
  labels: 
    app: interview
spec:
  type: LoadBalancer
  selector:
    app: interview
  ports:
    - port: 3000
      targetPort: 80
